# Lex

./: CMakeLists.txt  README.md  editor.c  editor.h  la.c  main.c  makefile  test2.c
.github/workflows/: cmake-multi-platform.yml
fontgen/: Makefile  fontgen.rs  output.txt  stb_image.lib
shaders/: font.vert
src/: file.c  file.h  font.vert  gl_extra.c  gl_extra.h  la.h  main.c  stb_image.h
tests/: test_file.c  test_gl_extra_header.c
